<resources>
    <string name="app_name">CardHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>

    <string name="inventory">Inventory</string>
    <string name="map">Map</string>
    <string name="trading">Trading</string>
    <string name="profile">Profile</string>
    <string name="create">Create</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Distance to nearest point</string>
    <string name="pick_place">Choose a place</string>
    <string name="compass">Compass</string>
    <string name="terms_of_service_link"><![CDATA[I have read and agree to the <br> <a href=\'https://www.youtube.com/watch?v=xvFZjo5PgG0\'>Terms and Conditions</a>]]></string>
</resources>