<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_inventory"
        android:enabled="true"
        android:icon="@drawable/inventory"
        android:title="@string/inventory"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map_s"
        android:enabled="true"
        android:icon="@drawable/map_i"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_trading"
        android:enabled="true"
        android:icon="@drawable/trading"
        android:title="@string/trading"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>